// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdultBlock /> should render with props 1`] = `
<AdultBlock
  isAuthUser={true}
  onClick={[MockFunction]}
>
  <Box
    direction="column"
    display="flex"
    flex="grow"
    marginTop={0}
  >
    <div
      className="display-flex flex-grow direction-column M-t__0"
    >
      <Box
        marginBottom={1}
      >
        <div
          className="M-b__1"
        >
          <ForwardRef(Text)
            size={16}
            weight={600}
          >
            <span
              className="size-16 line-height-24 weight-600"
              style={Object {}}
            >
              Товар для взрослых
            </span>
          </ForwardRef(Text)>
        </div>
      </Box>
      <ForwardRef(Text)
        lineHeight={20}
        size={12}
      >
        <span
          className="size-12 line-height-20"
          style={Object {}}
        >
          Подтвердите, что вы старше 18 лет, чтобы посмотреть товар.
        </span>
      </ForwardRef(Text)>
      <Box
        marginTop={6}
      >
        <div
          className="M-t__6"
        >
          <ForwardRef(Link)
            onClick={[MockFunction]}
            pseudo={true}
          >
            <a
              className="link brand-blue"
              data-testid="anchor"
              onClick={[MockFunction]}
              role="button"
              tabIndex={0}
            >
              <ForwardRef(Text)
                lineHeight={32}
                size={16}
                weight={600}
              >
                <span
                  className="size-16 line-height-32 weight-600"
                  style={Object {}}
                >
                  Подтвердить
                </span>
              </ForwardRef(Text)>
            </a>
          </ForwardRef(Link)>
        </div>
      </Box>
    </div>
  </Box>
</AdultBlock>
`;

exports[`<AdultBlock /> should render without props 1`] = `
<AdultBlock>
  <Box
    direction="column"
    display="flex"
    flex="grow"
    marginTop={0}
  >
    <div
      className="display-flex flex-grow direction-column M-t__0"
    >
      <Box
        marginBottom={1}
      >
        <div
          className="M-b__1"
        >
          <ForwardRef(Text)
            size={16}
            weight={600}
          >
            <span
              className="size-16 line-height-24 weight-600"
              style={Object {}}
            >
              Товар для взрослых
            </span>
          </ForwardRef(Text)>
        </div>
      </Box>
      <ForwardRef(Text)
        lineHeight={20}
        size={12}
      >
        <span
          className="size-12 line-height-20"
          style={Object {}}
        >
          Если вам уже есть 18 лет, авторизуйтесь, чтобы перейти к товару.
        </span>
      </ForwardRef(Text)>
      <Box
        marginTop={6}
      >
        <div
          className="M-t__6"
        >
          <ForwardRef(Link)
            pseudo={true}
          >
            <a
              className="link brand-blue"
              data-testid="anchor"
              role="button"
              tabIndex={0}
            >
              <ForwardRef(Text)
                lineHeight={32}
                size={16}
                weight={600}
              >
                <span
                  className="size-16 line-height-32 weight-600"
                  style={Object {}}
                >
                  Авторизоваться
                </span>
              </ForwardRef(Text)>
            </a>
          </ForwardRef(Link)>
        </div>
      </Box>
    </div>
  </Box>
</AdultBlock>
`;
